tests/NormalTests/paczka1/small_fuzzy/71050235.err
Error in line 7: 4nD A485 6,5
Error in line 6: S398 S280 71,6
Error in line 10: utuU S398 44,0
